--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
-    <title>Boilermaker</title>
+    <title>Tweet Heat</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script defer src="/bundle.js"></script>
   </head>
   <body>
     <div id="app"></div>
+    <script src="socket.io/socket.io.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5jcP4q9jxaNg5F2dEoTQE2jS4MukyeJI&libraries=visualization"></script>
   </body>
 </html>
 
